--- a/app/views/curation_concerns/linked_objects/_form_required_information.html.erb
+++ b/app/views/curation_concerns/linked_objects/_form_required_information.html.erb
@@ -1,7 +1,7 @@
 <fieldset class="required">
   <legend>Required Information</legend>
 
-  <%= f.input :title, as: :multi_value %>
+  <%= f.input :title, as: :uri_multi_value %>
 
   <%= f.input :creator, as: :multi_value %>
 
