--- a/app/views/curation_concerns/linked_objects/_form_required_information.html.erb
+++ b/app/views/curation_concerns/linked_objects/_form_required_information.html.erb
@@ -3,9 +3,9 @@
 
   <%= f.input :title, as: :uri_multi_value %>
 
-  <%= f.input :creator, as: :multi_value %>
+  <%= f.input :creator, as: :uri_multi_value %>
 
-  <%= f.input :contributor, as: :multi_value, input_html: { class: 'form-control' } %>
+  <%= f.input :contributor, as: :uri_multi_value, input_html: { class: 'form-control' } %>
 
   <%= f.input :description, as: :multi_value, input_html: { rows: '14', type: 'textarea'} %>
 </fieldset>
